[package]
name = "interp-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[[bench]]
name = "counting"
harness = false

[profile.test]
opt-level = 1

[profile.bench]
opt-level = 3